src/wasm-lib/kcl/tests/pipe_substitution_inside_function_called_from_pipeline/execution_error.snap
---
source: kcl/src/simulation_tests.rs
description: Error from executing pipe_substitution_inside_function_called_from_pipeline.kcl
---
KCL Semantic error

  × semantic: cannot use % outside a pipe expression
   ╭─[6:10]
 5 │ 
 6 │ answer = %
   ·          ┬
   ·          ╰── tests/pipe_substitution_inside_function_called_from_pipeline/input.kcl
 7 │   |> f(%)
   ╰────
